# john-b-yang.github.io

./: .gitignore  Makefile  NeuralNetworks.pptx  README.md  cs169  index.html  pyproject.toml  removed.txt  sitebuilder.py  ~$ddhartha Corrections.docx  ~$nal Script.docx
.github/workflows/: deploy.yml
about/: index.html
assets/css/: ie9.css  main.css
blogs/: index.html
blogs/Basketball/: index.html
blogs/Blockchain/: index.html
coremlconvert/: index.html
cos126/: index.html
cos324/: index.html
cs1/: index.html
cs126/: index.html
cs161/: index.html
cs169/: index.html
cs186/: index.html
cs2/: index.html
cs61c/: index.html
cs88/: index.html
csw186/: index.html
data/: news.json  publications.json  repos.json
drafts/: mnist-detection.md  testing-principles.md
flask-website/: index.html
images/: Sketch Pad.sketch
intro-to-git/: index.html
libra/: index.html
nba-hack-17/: index.html
news/: index.html
pages/: coremlconvert.md  flask-website.md  intro-to-git.md  libra.md  nba-hack-17.md  reading-template.md  swe-bench-cheating.md  swe-content-creator.md  swe-smith.md  twitter-bot.md
papers/: index.html
projects/: index.html
publications/: index.html
reading-template/: index.html
readings/: index.html
resources/: index.html
scratchpad/: brainstorm.md  outline.md
subscribe/: index.html
swe-bench-cheating/: index.html
swe-smith/: index.html
templates/: about.html  base.html  blogs.html  news.html  page.html  papers.html  projects.html  publications.html  resources.html
twitter-bot/: index.html
(+171 files in other folders)
