[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click==8.3.2",
    "flask==3.1.3",
    "flask-flatpages==0.9.0",
    "frozen-flask==1.0.2",
    "jinja2==3.1.6",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "urllib3==2.6.3",
    "werkzeug==3.1.8",
]
